# solid-c-cpp-public

./: .gitignore  README.md
Samples/: CMakeLists.txt  Makefile
Samples/src/1_principles/: main.cpp
Samples/src/1_principles/1_srp/: 1.too_long.cpp  2.mixed_levels.cpp  3.refactored.cpp
Samples/src/1_principles/2_cohesion/: Device.cpp  Device.h  IncohesiveDevice.cpp  IncohesiveDevice.h
Samples/src/1_principles/3_prefer_composition/prefer_composition_of_base/composition_of_base/: FileProcessor.cpp  FileProcessor.h  ILogger.h  Logger.cpp  Logger.h
Samples/src/1_principles/3_prefer_composition/prefer_composition_of_base/inheritance/: FileProcessor.cpp  FileProcessor.h  Logger.cpp  Logger.h
Samples/src/1_principles/3_prefer_composition/prefer_composition_of_derived/composition_of_derived/: ConsoleWriter.cpp  ConsoleWriter.h  FileWriter.cpp  FileWriter.h  IMessageWriter.h  LogLevel.h  Logger.cpp  Logger.h
Samples/src/1_principles/3_prefer_composition/prefer_composition_of_derived/duplication/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  LogLevel.h
Samples/src/1_principles/3_prefer_composition/prefer_composition_of_derived/template_method/: BaseLogger.cpp  BaseLogger.h  ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  LogLevel.h
Samples/src/2_tests/: characteristic_test.cpp  characteristic_test.h  math_test_fixture.cpp  math_test_fixture.h  test_methods.cpp
Samples/src/3_reduce_coupling/1_inheritance_one_file/: FileProcessor.cpp  FileProcessor.h
Samples/src/3_reduce_coupling/2_inheritance_separate_files/: FileProcessor.cpp  FileProcessor.h  Logger.cpp  Logger.h
Samples/src/3_reduce_coupling/3_pimpl/: FileProcessor.cpp  FileProcessor.h  LogLevel.h  Logger.cpp  Logger.h
Samples/src/3_reduce_coupling/4_interface/: FileProcessor.cpp  FileProcessor.h  ILogger.h  Logger.cpp  Logger.h
Samples/src/3_reduce_coupling/5_libraries/shared_object/dynamic_loader/: LibraryLoader.cpp  LibraryLoader.h  LibraryLoader_posix.hpp  LibraryLoader_win.hpp
Samples/src/3_reduce_coupling/5_libraries/shared_object/file_processor/: FileProcessor.cpp  FileProcessor.h  main.cpp
Samples/src/3_reduce_coupling/5_libraries/shared_object/include/: Exported.h
Samples/src/3_reduce_coupling/5_libraries/shared_object/logger/: Exports.cpp  Logger.cpp  Logger.h
Samples/src/3_reduce_coupling/5_libraries/static_library/calculator_app/: main.cpp
Samples/src/3_reduce_coupling/5_libraries/static_library/calculator_lib/: calculator.cpp
Samples/src/3_reduce_coupling/5_libraries/static_library/include/: calculator.h
Samples/src/4_legacy_code/inject_logger/: BusinessCalculator.cpp  BusinessCalculator.h  CalculatorBase.cpp  CalculatorBase.h  StandardCalculator.cpp  StandardCalculator.h
Samples/src/4_legacy_code/injected/: ConsoleLogger.h  ILogger.h  RecordingLogger.h
Samples/src/4_legacy_code/legacy/: BusinessCalculator.cpp  BusinessCalculator.h  CalculatorBase.cpp  CalculatorBase.h  StandardCalculator.cpp  StandardCalculator.h
Samples/src/4_legacy_code/refactored/: BusinessCalculator.cpp  BusinessCalculator.h  CalculatorBase.cpp  CalculatorBase.h  Memory.cpp  Memory.h  StandardCalculator.cpp  StandardCalculator.h
Samples/src/5_oop_in_c/interface/: ConsoleLogger.c  ConsoleLogger.h  FileLogger.c  FileLogger.h  ILogger.h  main.c
Samples/src/5_oop_in_c/interop/: c_func.c  c_func.h  cpp_func.cpp  cpp_func.h  main.cpp
(+1 files in other folders)
